--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,7 +86,6 @@ html, body {
   box-shadow: 0 0 20px rgba(0,0,0,1);
   -webkit-box-shadow: 0 0 20px rgba(0,0,0,1);
   -moz-box-shadow: 0 0 20px rgba(0,0,0,1);
-  padding-left: 8px;
 }
 
 .leftBar {
@@ -159,7 +158,7 @@ html, body {
 }
 
 
-.book:hover {
+.appartment:hover {
 	box-shadow: 0px 5px 15px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0px 5px 15px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0px 5px 15px rgba(0,0,0,0.5);
@@ -182,7 +181,7 @@ html, body {
 	margin: auto;
 	padding: 30px;
 }
-.bookDetail::-webkit-scrollbar-corner
+.bookDetail::-webkit-scrollbar-corner{
 	background-color: transparent;
 }
 .bookDetail::-webkit-scrollbar-button {
@@ -242,19 +241,19 @@ html, body {
 .bookDetail a:hover {
 	text-decoration: underline;
 }
-.library::-webkit-scrollbar {
+.subletting::-webkit-scrollbar {
 	height:8px;
 	width:8px
 }
-.library::-webkit-scrollbar-track-piece{
+.subletting::-webkit-scrollbar-track-piece{
 	border-radius:4px;
 }
-.library::-webkit-scrollbar-thumb:vertical {
+.subletting::-webkit-scrollbar-thumb:vertical {
 	height:25px;
 	background-color:#643413;
 	/*-webkit-border-radius: 4px;*/
 }
-.library:hover::-webkit-scrollbar-thumb:vertical {
+.subletting:hover::-webkit-scrollbar-thumb:vertical {
 	background-color:#4a260b;
 }
 .spinner {
