--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,17 +39,17 @@ html, body {
 
 #searchBar {
   width: 770px;
-  height: 44px;
-  background-color: burlywood;
+  height: 40px;
+  background: url(../images/roof_tile.png);
   margin: auto;
+  padding-top: 28px;
   margin-top: 30px;
-  border-radius: 5px 5px 0 0;
   box-shadow: 0 0 20px rgba(0,0,0,1);
-  -webkit-box-shadow: 0 0 20px rgba(0,0,0,1);
+  -webkit-box-shadow: 0 0 0px rgba(0,0,0,1);
   -moz-box-shadow: 0 0 20px rgba(0,0,0,1);
   line-height: 42px;
-  color: #2f1909;
-  text-shadow: 1px 1px 1px rgba(200,200,200, 0.5);
+  color: white;
+  text-shadow: 2px 2px 2px rgba(0,0,0, 1);
   text-align: center;
   line-height: 44px;
   position: relative;
@@ -57,8 +57,8 @@ html, body {
   #searchBar input[type="text"] {
     color: rgb(67, 35, 19);
     width: 500px;
-    border: 1px rgba(67,27,4, 0.4) solid;
-    background: rgba(0,0,0,0.1);
+    border: 1px rgba(167,127,124, 0.4) solid;
+    background: rgba(200,200,200,0.9);
     outline: none;
     border-radius: 15px;
     padding: 0px 15px;
@@ -69,11 +69,11 @@ html, body {
     }
   #searchBar input[type="text"]:hover {
     border: 1px rgba(67,27,4, 0.4) solid;
-    background: rgba(250, 250, 250, 0.15);
+    background: rgba(250, 250, 250, 0.95);
     }
   #searchBar input[type="text"]:focus {
-    border: 1px rgba(67,27,4, 0.4) solid;
-    background: rgba(250,250,250,0.3);
+    border: 1px rgba(167,217,214, 0.94) solid;
+    background: rgba(250,250,250,1);
     }
 
 #appartmentList {
