--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -81,7 +81,6 @@ html, body {
   height: 573px;
   position: relative;
   margin: auto;
-  background: url(../images/rightBar-plus.png);
   background-position: top right;
   overflow-y: scroll;
   box-shadow: 0 0 20px rgba(0,0,0,1);
@@ -167,42 +166,46 @@ html, body {
 	-moz-transform: scale(1.1);
 }
 
-.bookDetail {
-	width: 540px;
-	max-height: 300px;
-	overflow: auto;
-	position: absolute;
-	top: 0;
-	left: 0;
-	background: url(../images/bgDetail.png);
-	border-radius: 5px;
-	box-shadow: 0 0 20px rgba(0,0,0,0.7);
-	bottom: 0;
-	right: 0;
-	margin: auto;
-	padding: 30px;
+
+
+.appartmentDetail {
+    width: 762px;
+    height: 573px;
+    position: relative;
+    margin: auto;
+    background-position: top right;
+    background-color: #ffffff;
+    overflow-y: scroll;
+    box-shadow: 0 0 20px rgba(0,0,0,1);
+    -webkit-box-shadow: 0 0 20px rgba(0,0,0,1);
+    -moz-box-shadow: 0 0 20px rgba(0,0,0,1);
 }
-.bookDetail::-webkit-scrollbar-corner{
+
+.appartmentDetail .close{
+ cursor: pointer;
+}
+
+.appartmentDetail::-webkit-scrollbar-corner{
 	background-color: transparent;
 }
-.bookDetail::-webkit-scrollbar-button {
+.appartmentDetail::-webkit-scrollbar-button {
 	width: 0;
 	height: 0;
 	display: none;
 }
-.bookDetail::-webkit-scrollbar-thumb {
+.appartmentDetail::-webkit-scrollbar-thumb {
 	background-color: rgba(0, 0, 0, 0.2);
 	-webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07);
 }
-.bookDetail::-webkit-scrollbar {
+.appartmentDetail::-webkit-scrollbar {
 	width: 10px;
 	height: 16px;
 }
-.bookDetail:hover::-webkit-scrollbar-thumb {
+.appartmentDetail:hover::-webkit-scrollbar-thumb {
 	background-color: rgba(0, 0, 0, 0.3);
 }
 
-.bookDetail .imgBook {
+.appartmentDetail .imgBook {
 	width: 200px;
 	height: 260px;
 	box-shadow: 0px 0px 7px rgba(0,0,0,0.5);
@@ -211,35 +214,35 @@ html, body {
 	margin-right: 30px;
 	float:left;
 }
-.bookDetail .imgBook img {
+.appartmentDetail .imgBook img {
 	width: 200px;
 	height: 260px;
 	position: absolute;
 }
-.bookDetail h1 {
+.appartmentDetail h1 {
 	color: rgb(40,40,40);
 	margin: 0;
 }
-.bookDetail h1 {
+.appartmentDetail h1 {
 	color: rgb(40,40,40);
 	margin: 0;
 }
-.bookDetail h2 {
+.appartmentDetail h2 {
 	color: rgb(80,80,80);
 	margin-top: 0;
 	margin-bottom: 0px;
 	font-size: 1.4em;
 }
-.bookDetail p {
+.appartmentDetail p {
 	margin-top: 8px;
 	color: rgb(100,100,100);
 }
 
-.bookDetail a {
+.appartmentDetail a {
 	color: rgb(57,96,150);
 	text-decoration: none;
 }
-.bookDetail a:hover {
+.appartmentDetail a:hover {
 	text-decoration: underline;
 }
 .subletting::-webkit-scrollbar {
