--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,12 +170,10 @@ html, body {
 
 .appartmentDetail {
     width: 762px;
-    height: 573px;
     position: relative;
     margin: auto;
     background-position: top right;
     background-color: #ffffff;
-    overflow-y: scroll;
     box-shadow: 0 0 20px rgba(0,0,0,1);
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,1);
     -moz-box-shadow: 0 0 20px rgba(0,0,0,1);
@@ -183,6 +181,12 @@ html, body {
 
 .appartmentDetail .close{
  cursor: pointer;
+ position: absolute;
+}
+
+.appartmentDetail .close:hover{
+    -webkit-transform: scale(1.1);
+    -moz-transform: scale(1.1);
 }
 
 .appartmentDetail::-webkit-scrollbar-corner{
@@ -205,19 +209,14 @@ html, body {
 	background-color: rgba(0, 0, 0, 0.3);
 }
 
-.appartmentDetail .imgBook {
-	width: 200px;
-	height: 260px;
-	box-shadow: 0px 0px 7px rgba(0,0,0,0.5);
-	-o-box-shadow: 0px 0px 7px rgba(0,0,0,0.5);
-	-moz-box-shadow: 0px 0px 7px rgba(0,0,0,0.5);
-	margin-right: 30px;
-	float:left;
+.appartmentDetail .appartment-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
-.appartmentDetail .imgBook img {
-	width: 200px;
-	height: 260px;
-	position: absolute;
+
+.appartmentDetail .descAppartment{
+    padding: 20px;
 }
 .appartmentDetail h1 {
 	color: rgb(40,40,40);
