--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -76,7 +76,7 @@ html, body {
     background: rgba(250,250,250,1);
     }
 
-#appartmentList {
+#apartmentList {
   width: 762px;
   height: 573px;
   position: relative;
@@ -100,7 +100,7 @@ html, body {
   background: url(../images/rightBar.png);
 }
 
-.appartments {
+.apartments {
   width: 700px;
   display: table-cell;
   background: url(../images/bgLibrary.png);
@@ -116,7 +116,7 @@ html, body {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.7);
 }
 
-.appartment {
+.apartment {
   /*-webkit-transition: all 0.2s ease-in-out;*/
   -moz-transition: all 0.2s ease-in-out;
   -o-transition: all 0.2s ease-in-out;
@@ -138,29 +138,29 @@ html, body {
 
 
 
-.appartment-img-text {
+.apartment-img-text {
     position: relative;
     width: 100px; /* for IE 6 */
 }
 
-.appartment-img-text p {
+.apartment-img-text p {
     position: absolute;
     top: 3px;
     left: -105px;
     width: 100%;
 }
-.appartment-img-text .bg{
+.apartment-img-text .bg{
       background-color: rgba(0,0,0,0.5);
       color: #ffffff;
 }
 
-.appartment-img-text .bg .spacer{
+.apartment-img-text .bg .spacer{
     padding: 0 2px;
     background: none;
 }
 
 
-.appartment:hover {
+.apartment:hover {
 	box-shadow: 0px 5px 15px rgba(0,0,0,0.5);
 	-moz-box-shadow: 0px 5px 15px rgba(0,0,0,0.5);
 	-webkit-box-shadow: 0px 5px 15px rgba(0,0,0,0.5);
@@ -170,7 +170,7 @@ html, body {
 
 
 
-.appartmentDetail {
+.apartmentDetail {
     width: 762px;
     position: relative;
     margin: auto;
@@ -182,7 +182,7 @@ html, body {
     border-radius: 0 0 10px 10px;
 }
 
-.appartmentDetail label {
+.apartmentDetail label {
         /* Other styling.. */
     text-align: right;
     clear: both;
@@ -190,55 +190,55 @@ html, body {
     margin-right:15px;
 }
 
-.appartmentDetail .close{
+.apartmentDetail .close{
  cursor: pointer;
  position: absolute;
 }
 
-.appartmentDetail .close:hover{
+.apartmentDetail .close:hover{
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
 }
 
-.appartmentDetail .close:active{
+.apartmentDetail .close:active{
     transform: rotate(-10deg);
 }
 
-.appartmentDetail .store{
+.apartmentDetail .store{
    float: right;
     cursor: pointer;
 }
 
-.appartmentDetail .store:hover{
+.apartmentDetail .store:hover{
     -webkit-transform: scale(1.1);
     -moz-transform: scale(1.1);
 }
 
-.appartmentDetail .store:active{
+.apartmentDetail .store:active{
     transform: rotate(10deg);
 }
 
-.appartmentDetail::-webkit-scrollbar-corner{
+.apartmentDetail::-webkit-scrollbar-corner{
 	background-color: transparent;
 }
-.appartmentDetail::-webkit-scrollbar-button {
+.apartmentDetail::-webkit-scrollbar-button {
 	width: 0;
 	height: 0;
 	display: none;
 }
-.appartmentDetail::-webkit-scrollbar-thumb {
+.apartmentDetail::-webkit-scrollbar-thumb {
 	background-color: rgba(0, 0, 0, 0.2);
 	-webkit-box-shadow: inset 1px 1px 0 rgba(0,0,0,0.10),inset 0 -1px 0 rgba(0,0,0,0.07);
 }
-.appartmentDetail::-webkit-scrollbar {
+.apartmentDetail::-webkit-scrollbar {
 	width: 10px;
 	height: 16px;
 }
-.appartmentDetail:hover::-webkit-scrollbar-thumb {
+.apartmentDetail:hover::-webkit-scrollbar-thumb {
 	background-color: rgba(0, 0, 0, 0.3);
 }
 
-.appartmentDetail .appartment-img {
+.apartmentDetail .apartment-img {
     display: block;
     margin-left: auto;
     margin-right: auto;
@@ -246,14 +246,14 @@ html, body {
     border-radius: 5px;
 }
 
-.appartmentDetail .descAppartment{
+.apartmentDetail .descApartment{
     padding: 20px;
     padding-bottom: 100px;
     padding-bottom: 100px;
 
 }
 
-.appartmentDetail .descAppartment input{
+.apartmentDetail .descApartment input{
     width: 80%;
     display: block;
     margin-top: 4px;
@@ -261,7 +261,7 @@ html, body {
     margin-right: auto;
 }
 
-.appartmentDetail .descAppartment textarea{
+.apartmentDetail .descApartment textarea{
     width: 100%;
     height: 500px;
     display: block;
@@ -269,34 +269,34 @@ html, body {
     margin-right: auto;
 
 }
-.appartmentDetail img{
+.apartmentDetail img{
     margin: 10px;
 }
 
-.appartmentDetail h1 {
+.apartmentDetail h1 {
 	color: rgb(40,40,40);
 	margin: 0;
 }
-.appartmentDetail h1 {
+.apartmentDetail h1 {
 	color: rgb(40,40,40);
 	margin: 0;
 }
-.appartmentDetail h2 {
+.apartmentDetail h2 {
 	color: rgb(80,80,80);
 	margin-top: 0;
 	margin-bottom: 0px;
 	font-size: 1.4em;
 }
-.appartmentDetail p {
+.apartmentDetail p {
 	margin-top: 8px;
 	color: rgb(100,100,100);
 }
 
-.appartmentDetail a {
+.apartmentDetail a {
 	color: rgb(57,96,150);
 	text-decoration: none;
 }
-.appartmentDetail a:hover {
+.apartmentDetail a:hover {
 	text-decoration: underline;
 }
 .subletting::-webkit-scrollbar {
