--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,15 @@
 html, body {
-	background: url(../images/bg.jpg);
-    background-size: 100% 100%;
+	background: url(../images/bg.png);
+  background-size: cover;
 	font-family: 'Sofia', cursive;
+  width: 100%; 
+  height: 100%; 
+  left: 0px; 
+  top: 0px; 
+  z-index: -1;
+  overflow-x: hidden;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 #credits {
@@ -43,6 +51,7 @@ html, body {
   background: url(../images/roof_tile.png);
   margin: auto;
   padding-top: 28px;
+  margin-bottom: 20px;
   margin-top: 30px;
   box-shadow: 0 0 20px rgba(0,0,0,1);
   -webkit-box-shadow: 0 0 0px rgba(0,0,0,1);
@@ -104,6 +113,7 @@ html, body {
   width: 700px;
   display: table-cell;
   background: url(../images/bgLibrary.png);
+  background-color: white;
 }
 
 .title {
@@ -179,7 +189,7 @@ html, body {
     box-shadow: 0 0 20px rgba(0,0,0,1);
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,1);
     -moz-box-shadow: 0 0 20px rgba(0,0,0,1);
-    border-radius: 0 0 10px 10px;
+    border-radius: 10px;
 }
 
 .apartmentDetail label {
